--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,6 @@
 {
- "version": 2,
- "builds": [
-  {
-   "src": "index.js",
-   "use": "@vercel/node",
-   "config": { "includeFiles": ["dist/**"] }
-  }
- ],
- "routes": [
-  {
-   "src": "/(.*)",
-   "dest": "index.js"
-  }
- ]
+  "version": 3,
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/index.js" }
+  ]
 }
